# MHD2DSpectral

./: .envrc  .gitignore  README.md  environment.yml  justfile  makefile  mhd.f90  pyproject.toml  read_output.py
examples/: main.ipynb  mhd.input
examples/bipolar_pulse/: mhd.input
examples/p_b_bomb/: mhd.input
examples/p_th_bomb/: mhd.input
examples/tearing/: functions.py  mhd.input  read_output.py
src/: makefile  mhd.f90  mhd.input  mhdinit.f90
src/pylaps/: functions.py  plot.py  read.py
